fix autotest build failure